--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- node // buffer-->
+<script>window.global = window;</script>
+
   </body>
 </html>
